# riff-api

./: .gitignore  README.md  demo_app.py  pyproject.toml  requirements.txt
examples/: 0_topic_request.py  1_simple.py  2_instrumental.py  3_variations.py  4_multiple_prompts.py  5_transition.py  6_audio_formats.py  7_timestamped_lyrics.py  8_topic.py
examples/riff/: 1_simple.py  2_instrumental.py  3_variations.py  4_multiple_prompts.py  5_transition.py  6_timestamped_lyrics.py  7_audio_formats.py
examples/topic/: 1_request.py  2_standard.py  6_audio_formats.py  8_topic.py
riff_api/: __init__.py  api.py  datatypes.py
riffusion/: api.py  datatypes.py
riffusion_api/: __init__.py  api.py
