[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riff_api"
version = "0.1.2"
authors = [
  { name="Hayk Martiros", email="hayk@riffusion.com" },
  { name="Naveen Iyer", email="naveen@riffusion.com" },
]
description = "Riffusion API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.25.1"
]

[project.urls]
Homepage = "https://github.com/corpusant-ai/riff-api/"
Issues = "https://github.com/corpusant-ai/riff-api/issues"
